Implemented markdown formatting 1

--- a/src/components/GeminiPrompt.css
+++ b/src/components/GeminiPrompt.css
@@ -36,6 +36,112 @@
     align-self: flex-start;
   }
   
+  /* New styles for Markdown formatting */
+  .message-sender {
+    display: inline-block;
+    margin-bottom: 5px;
+  }
+  
+  .message-content {
+    margin-top: 5px;
+  }
+  
+  .markdown-content {
+    font-family: inherit;
+    line-height: 1.5;
+  }
+  
+  .markdown-content p {
+    margin: 0.5em 0;
+  }
+  
+  .markdown-content h1,
+  .markdown-content h2,
+  .markdown-content h3,
+  .markdown-content h4,
+  .markdown-content h5,
+  .markdown-content h6 {
+    margin-top: 1em;
+    margin-bottom: 0.5em;
+    font-weight: 600;
+    color: #e8eaed;
+  }
+  
+  .markdown-content h1 { font-size: 1.6em; }
+  .markdown-content h2 { font-size: 1.4em; }
+  .markdown-content h3 { font-size: 1.3em; }
+  .markdown-content h4 { font-size: 1.2em; }
+  .markdown-content h5 { font-size: 1.1em; }
+  .markdown-content h6 { font-size: 1em; }
+  
+  .markdown-content ul,
+  .markdown-content ol {
+    padding-left: 1.5em;
+    margin: 0.5em 0;
+  }
+  
+  .markdown-content li {
+    margin: 0.2em 0;
+  }
+  
+  .markdown-content blockquote {
+    border-left: 3px solid #666;
+    margin-left: 0;
+    padding-left: 1em;
+    color: #aaa;
+  }
+  
+  .markdown-content code {
+    font-family: 'Courier New', monospace;
+    padding: 2px 5px;
+    background-color: #282c34;
+    border-radius: 3px;
+    font-size: 0.9em;
+  }
+  
+  .markdown-content pre {
+    background-color: #282c34;
+    padding: 10px;
+    border-radius: 5px;
+    overflow-x: auto;
+    margin: 0.5em 0;
+  }
+  
+  .markdown-content pre code {
+    background-color: transparent;
+    padding: 0;
+  }
+  
+  .markdown-content a {
+    color: #4d7eff;
+    text-decoration: none;
+  }
+  
+  .markdown-content a:hover {
+    text-decoration: underline;
+  }
+  
+  .markdown-content table {
+    border-collapse: collapse;
+    width: 100%;
+    margin: 1em 0;
+  }
+  
+  .markdown-content th,
+  .markdown-content td {
+    border: 1px solid #444;
+    padding: 6px 10px;
+  }
+  
+  .markdown-content th {
+    background-color: #333;
+  }
+  
+  .markdown-content img {
+    max-width: 100%;
+    border-radius: 4px;
+  }
+
   form {
     display: flex;
     flex-direction: column;
